Migrate local posts

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
 name: Ryan Daigle
-bio: Learning things, sharing things
+bio: Half-stack engineer
 
 # twitter summary info
 description: A blog about engineering, technology, and related stuff
